# PYJX2

./: .gitignore  .importlinter  README.md  mkdocs.yml  pyjx2.json.example  pyjx2.toml.example  pyproject.toml  pytest.ini  replit.md
pyjx2/: Diagramas Uml  README.md  bootstrap.py  cli_failures.txt  debug_1.txt  debug_missing.txt  debug_missing_2.txt  docs_runtime.py  failures.txt  final_2_debug.txt  final_failures.txt  final_final_failures.txt  final_test_report.txt  mkdocs.yml  pyjx2.json.example  pyjx2.toml.example  pyproject.toml  pytest_out.txt  pytest_utf8.txt  setup.py  test_failures.txt  test_out.txt
pyjx2/_bundled_docs/: 404.html  index.html
pyjx2/_bundled_docs/advanced/code-quality/: index.html
pyjx2/_bundled_docs/advanced/python-api/: index.html
pyjx2/_bundled_docs/getting-started/configuration/: index.html
pyjx2/_bundled_docs/getting-started/installation/: index.html
pyjx2/_bundled_docs/getting-started/security/: index.html
pyjx2/_bundled_docs/interfaces/cli/: index.html
pyjx2/_bundled_docs/interfaces/tui/: index.html
pyjx2/_bundled_docs/search/: search_index.json
pyjx2/_bundled_docs/user-guides/common-use-cases/: index.html
pyjx2/_bundled_docs/user-guides/setup/: index.html
pyjx2/_bundled_docs/user-guides/sync/: index.html
pyjx2/api/: __init__.py  client.py
pyjx2/application/: __init__.py
pyjx2/application/services/: encryption_service.py  sync_service.py
pyjx2/application/use_cases/setup/: __init__.py  models.py  resolvers.py  setup_config.py  setup_global_settings.py  setup_interactor.py  setup_result.py  setup_result_metrics.py  setup_source_config.py  setup_test_execution_config.py  setup_test_plan_config.py  setup_test_set_config.py  test_case_source_resolver.py  test_plan_resolver.py  (+2 more)
pyjx2/cli/: app.py
pyjx2/docs/: index.md
pyjx2/docs/advanced/: python-api.md
pyjx2/docs/getting-started/: configuration.md  installation.md  security.md
pyjx2/docs/interfaces/: cli.md  tui.md
pyjx2/docs/user-guides/: setup.md  sync.md
pyjx2/domain/: __init__.py
pyjx2/domain/entities/: __init__.py  test.py  test_execution.py  test_plan.py  test_set.py
pyjx2/domain/repositories/: __init__.py  test_execution_repository.py  test_plan_repository.py  test_repository.py  test_set_repository.py
pyjx2/domain/value_objects/: __init__.py  application.py  base.py  keys.py  status.py  test_type.py  upload_mode.py
pyjx2/infrastructure/: __init__.py
pyjx2/infrastructure/config/: schema.json  settings.py
pyjx2/infrastructure/jira/: client.py
pyjx2/infrastructure/security/: encryption.py
pyjx2/infrastructure/xray/: __init__.py  client.py  repositories.py
pyjx2/pyjx2/: __init__.py
pyjx2/pyjx2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pyjx2/pyjx2/api/: client.py
pyjx2/pyjx2/application/: __init__.py
pyjx2/pyjx2/cli/: app.py
pyjx2/pyjx2/domain/: __init__.py
pyjx2/pyjx2/infrastructure/: __init__.py
pyjx2/pyjx2/tui/: app.py  ascii_parser.py
pyjx2/site/: 404.html  index.html
pyjx2/site/search/: search_index.json
pyjx2/tests/: conftest.py
pyjx2/tests/acceptance/: test_cli.py  test_config_flow.py  test_setup_flow.py  test_sync_flow.py
pyjx2/tests/unit/: test_cli_config.py  test_encryption.py  test_settings.py  test_setup_interactor.py  test_setup_service.py  test_sync_service.py
pyjx2/tui/: __init__.py  app.py  ascii_parser.py
(+62 files in other folders)
