[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjx2"
version = "0.1.0"
description = "Jira/Xray automation tool with CLI, TUI, and scripting API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "typer>=0.9",
    "rich>=13",
    "textual>=0.40",
    "toml>=0.10",
    "jsonschema>=4",
    "cryptography>=41.0.0",
]

[project.scripts]
pyjx2 = "pyjx2.cli.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyjx2*"]

[tool.setuptools.package-data]
pyjx2 = ["infrastructure/config/schema.json"]

[project.optional-dependencies]
dev = ["pytest", "pytest-bdd", "pytest-mock"]
docs = ["mkdocs-material", "pymdown-extensions"]
